Added Delete handler with swagger documentation
