# data/products.go
@@ -11,14 +11,14 @@ import (
 )
 
 type Product struct {
-	ID           int     `json:"id"`
-	Name         string  `json:"name" validate:"required"`
-	Destcription string  `json:"description"`
-	Price        float32 `json:"price" validate:"gt=0"`
-	SKU          string  `json:"sku" validate:"required,sku"`
-	CreatedOn    string  `json:"-"`
-	UpdatedOn    string  `json:"-"`
-	DeletedOn    string  `json:"-"`
+	ID          int     `json:"id"`
+	Name        string  `json:"name" validate:"required"`
+	Description string  `json:"description"`
+	Price       float32 `json:"price" validate:"gt=0"`
+	SKU         string  `json:"sku" validate:"required,sku"`
+	CreatedOn   string  `json:"-"`
+	UpdatedOn   string  `json:"-"`
+	DeletedOn   string  `json:"-"`
 }
 
 type Products []*Product
@@ -62,9 +62,33 @@ func findProduct(id int) (*Product, int, error) {
 
 var ErrProductNotFound = fmt.Errorf("Product not found")
 
-func (p *Products) ToJSON(w io.Writer) error {
+// DeleteProduct deletes a product from the database
+func DeleteProduct(id int) error {
+	i := findIndexByProductID(id)
+	if i == -1 {
+		return ErrProductNotFound
+	}
+
+	productsList = append(productsList[:i], productsList[i+1])
+
+	return nil
+}
+
+// findIndex finds the index of a product in the database
+// returns -1 when no product can be found
+func findIndexByProductID(id int) int {
+	for i, p := range productsList {
+		if p.ID == id {
+			return i
+		}
+	}
+
+	return -1
+}
+
+func ToJSON(i interface{}, w io.Writer) error {
 	e := json.NewEncoder(w)
-	return e.Encode(p)
+	return e.Encode(i)
 }
 
 func (p *Product) FromJSON(w io.Reader) error {
@@ -86,21 +110,21 @@ func validateSKU(fl validator.FieldLevel) bool {
 
 var productsList = []*Product{
 	&Product{
-		ID:           1,
-		Name:         "Latte",
-		Destcription: "Frothy milky coffe",
-		Price:        2.45,
-		SKU:          "abc323",
-		CreatedOn:    time.Now().UTC().String(),
-		UpdatedOn:    time.Now().UTC().String(),
+		ID:          1,
+		Name:        "Latte",
+		Description: "Frothy milky coffe",
+		Price:       2.45,
+		SKU:         "abc323",
+		CreatedOn:   time.Now().UTC().String(),
+		UpdatedOn:   time.Now().UTC().String(),
 	},
 	&Product{
-		ID:           2,
-		Name:         "Espresso",
-		Destcription: "Short and strong coffe without milk",
-		Price:        1.99,
-		SKU:          "fdj34",
-		CreatedOn:    time.Now().UTC().String(),
-		UpdatedOn:    time.Now().UTC().String(),
+		ID:          2,
+		Name:        "Espresso",
+		Description: "Short and strong coffe without milk",
+		Price:       1.99,
+		SKU:         "fdj34",
+		CreatedOn:   time.Now().UTC().String(),
+		UpdatedOn:   time.Now().UTC().String(),
 	},
 }
